style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
    display: block;
}

body {
    line-height: 1;
}

ol,
ul {
    list-style: none;
}

blockquote,
q {
    quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
    content: '';
    content: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

/* -------------------------------------------------------------------------------------------------*/

/* rethink font
// <uniquifier>: Use a unique and descriptive class name
// <weight>: Use a value from 400 to 800

.rethink-sans-<uniquifier> {
  font-family: "Rethink Sans", sans-serif;
  font-optical-sizing: auto;
  font-weight: <weight>;
  font-style: normal;
} */

/* lato font
font-family: "Lato", sans-serif;
  font-weight: 700;
  font-style: normal; */
body {
    padding: 0 50px;
    background-color: #42375c;
}

.nav-links {
    display: flex;
    flex-direction: row;
    justify-content: space-between;

}

.navbar {
    padding: 1em 5em;
    background-color: #372E4D;
}

li a {
    font-family: "Rethink Sans", sans-serif;
    font-weight: 400;
    font-size: 1em;
    letter-spacing: 1px;
    color: white;
    text-transform: uppercase;
    text-decoration: none;
}

.section-one {
    height: 100dvh;
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.b1 {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.b1 .introduction {
    flex-grow: 1;
    font-family: "Rethink Sans", sans-serif;
    font-weight: 100;
    font-size: 0.9em;
    letter-spacing: 1px;
    text-align: left;
    color: white;
    max-width: 70%;
    line-height: 18px
}

.b1 h1 {
    color: white;
    font-family: "lato", sans-serif;
    font-weight: 700;
    letter-spacing: -6px;
    text-transform: capitalize;
    font-size: 7em;

}

.intro {
    padding-top: 3em;
    max-width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: start;
}

.intro .button {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 6em;
    height: 100%;
    text-decoration: none;
    color: white;
    background-color: #B084CC;
    border-radius: 0.2em;
}

.b1,
.b3 {
    flex-grow: 2;
    width: 100%;
}

.fi-sr-angle-small-right {
    font-size: 2em;
    text-align: center;
}

.b2 {
    align-self: flex-end;
    /* background-color: black; */
    flex-grow: 1;
}

.b2 img {
    position: relative;
    width: 250px;
    aspect-ratio: 1/3;
    object-fit: cover;
    z-index: 1;
    mix-blend-mode: luminosity;
    filter: drop-shadow(0 0 0.75rem crimson);
}

.b3 {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    padding-left: 30px;
}

.b3 p {
    user-select: none;
    color: rgb(36, 31, 51, 0.5);
    font-family: "Lato", sans-serif;
    font-weight: 800;
    font-size: 3.5em;
    text-align: start;
    letter-spacing: -2px;
}

.My_work {
    color: #B084CC;
    opacity: 0.5;
}

.icons {
    display: flex;
    flex-direction: row;
    justify-content: start;
}

.icons a {
    flex: 1;
    color: white;
    text-decoration: none;
    font-size: 2em;
    transition: color ease-in 0.1s;
}

.icons a:hover {
    color: #B084CC;
}

.b3 .project-box {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: start;
    /* margin-left: -50px;
    padding-left: 50px; */
    width: 100%;
    height: 20%;
    border-radius: 1px;
}

.project-box a {
    font-family: "Rethink Sans", sans-serif;
    font-weight: 200;
    font-size: 1.5em;
    color: white;
    text-decoration: none;
    text-transform: capitalize;
}

.project-box a:nth-last-of-type(1) {
    width: 90%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-left: 10px;
    background-color: rgba(255, 255, 255, 0.2);
    backdrop-filter: blur(40px);
    transition: all 0.2s ease-in;
    -webkit-backdrop-filter: blur(40px);
    flex: 1;
    border-radius: 6px;
    cursor: pointer;
}

.project-box a:nth-last-of-type(2) {
    color: white;
    width: 85%;
    padding-left: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex: 1;
    border-radius: 6px;
    background-color: #B084CC;
    backdrop-filter: blur(40px);
    transition: all 0.2s ease-in;
    -webkit-backdrop-filter: blur(40px);
    cursor: pointer;
    margin-bottom: 10px;
}

.project-box a:nth-last-of-type(3) {
    width: 80%;
    padding-left: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex: 1;
    margin-bottom: 10px;
    border-radius: 6px;
    background-color: rgba(255, 255, 255, 0.2);
    backdrop-filter: blur(40px);
    -webkit-backdrop-filter: blur(40px);
    transition: all 0.2s ease-in;
    cursor: pointer;
}

.project-box a:nth-last-of-type(1):hover {
    width: 100%;
}

.project-box a:nth-last-of-type(2):hover {
    width: 100%;
}

.project-box a:nth-last-of-type(3):hover {
    width: 100%;
}

